pequeños ajustes al index y reduccion de lineas a style

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     	 <meta name="viewport" content="width=device-width, initial-scale=1"> <!-- evita que se haga zoom -->
     <script src="https://use.fontawesome.com/a98bc02b4c.js"></script>
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
 	<link href="https://fonts.googleapis.com/css?family=Noto+Serif:400,700,700i" rel="stylesheet">
 </head>
 <body >
