ajustes a meta descripcion del index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="description" content="Riviera Maya es un bar y restaurante de Nicaragua ubicado en en Rivas, la virgen, que ofrece una buena variedad de platillos y bebidas, también podrá realizar reservaciones para sus eventos " />
+	<meta name="description" content="Riviera Maya es un bar y restaurante de Nicaragua ubicado en Rivas, la virgen, que ofrece una buena variedad de platillos y bebidas, también podrá realizar reservaciones para sus eventos " />
 	<meta name="author" 		content="Team JEMB" />
 	
 	<meta name="keywords" content="rivieramaya, Riviera Maya, restaurante, Restaurante, comida, comida rica, Riviera, Maya, restaurante rivieramaya, restaurante rivense, restaurante de Rivas" />
