Arreglos al footer en la parte de escritorio

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
         	<section id="Logom" >
         		
-        		<figure class="flex-item-header">
+        		<figure class="flex-item-center">
 		              <img src="images/logosup.png" alt="Logo de rivieramaya" width="120" height="36">
                 </figure>
 
@@ -190,7 +190,7 @@
                   
 		</section>
 
-		<section id="logofooter" class="item-flex flex-footer flex-item-header">
+		<section id="logofooter" class="item-flex flex-footer flex-item-center">
 		    <figure>
 			  <img src="images/logosup.png" alt="Logo de rivieramaya" width="237" height="63">
 			</figure>
