Cambio de contenido de parrafo de las secciones M_E_C

--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 					<figure class="img-menu">
 					      <img class="img-menu" src="images/menu.jpg" alt="nuestro menú" >
 					</figure>
-				<p class="p-menu"><a href="">Vea aquí nuestro menú <br>
-			       y nuestras ofertas.</a> </p>
+				<p class="p-menu"><a href="">Pulse aquí para más <br>
+			       información.</a> </p>
 			</article>
 
 			<article id="section-eventos" class="colordiv">
@@ -144,9 +144,8 @@
 					<figure class="img-menu">
 					      <img class="img-menu" src="images/evenprox.jpg" alt="nuestro menú" >
 					</figure>
-				<p class="p-menu"><a href="">Vea aquí para más  <br>
-			       información</a>  
-			    </p>
+				<p class="p-menu"><a href="">Pulse aquí para más <br>
+			       información.</a> </p>
 			</article>
 
 			<article id="section-coctel" class="colordiv">
@@ -155,7 +154,8 @@
 					<figure class="img-menu">
 					      <img class="img-menu" src="images/cocteles.jpg" alt="nuestro menú" >
 					</figure>
-				<p class="p-menu"><a href="">Vea nuestra lista de cócteles</a> </p>
+				<p class="p-menu"><a href="">Pulse aquí para más <br>
+			       información.</a> </p>
 			</article>
 
 
